# QuatNet

./: .gitignore  AGENTS.md  CMakeLists.txt  DesignOverview.md  LICENSE  MakeFile  Quaternion_Backprop_Design.md  README.md  data_loader.py  isokawa_pytorch_layer.py  quatnet_pytorch_layer.py  requirements.txt  setup.py  test_import.py  train_compression.py  visualize_compression.py
ref/: 2txt.py  D10.txt  Quaternion Neural Network and Its Application.md  Quaternion Recurrent Neural Networks.md  RoPE.py  att.py  axes.md  color.py  dual.md  geometricLattice.py  lattice.py  map.py  mathjax_config.js  rgb.py  single.py  test.py  test2.py  try.md  ww.py  wx.py
ref/Lattice/: Clifford.py  Q.py  attention.md  lattice.py  notes.md  progression.md  train.py
scripts/: organize_images.py  quaternion_compression.py  remote-ci.sh
src/: bindings.cpp  hamprod_kernel.cu  hamprod_kernel.h  isokawa_layer.cu  isokawa_layer.h  main.cpp  quat_ops.cu  quat_ops.h  quatnet_layer.cpp  quatnet_layer.cu  quatnet_layer.h  utils.h
tests/: hamprod_tests.cpp
